infra/k8s/boards-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boards-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boards
  template:
    metadata:
      labels:
        app: boards
    spec:
      containers:
        - name: boards
          image: asi309/boards
          resources:
            limits:
              memory: '300Mi'
              cpu: '500m'

---
apiVersion: v1
kind: Service
metadata:
  name: boards-srv
spec:
  selector:
    app: boards
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: boards
