infra/k8s/boards-mongodb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boards-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boards-mongodb
  template:
    metadata:
      labels:
        app: boards-mongodb
    spec:
      containers:
      - name: boards-mongodb
        image: mongo
        ports:
          - containerPort: 27017
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: boards-mongodb-srv
spec:
  clusterIP: None
  selector:
    app: boards-mongodb
  ports:
  - name: db
    port: 27017
    targetPort: 27017
    protocol: TCP
