infra/k8s/columns-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: columns-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: columns
  template:
    metadata:
      labels:
        app: columns
    spec:
      containers:
        - name: columns
          image: asi309/columns
          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'

---
apiVersion: v1
kind: Service
metadata:
  name: columns-srv
spec:
  selector:
    app: columns
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: columns
