infra/k8s/tasks-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: asi309/tasks
          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'

---
apiVersion: v1
kind: Service
metadata:
  name: tasks-srv
spec:
  selector:
    app: tasks
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: tasks
