infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: kanban.com
      http:
        paths:
          - pathType: Prefix
            path: /api/users/?.*
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/boards/?.*
            backend:
              service:
                name: boards-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/orders/.*
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /.*
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
